<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="doc">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="mail_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="doc_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail">vik.antufev@yandex.ru</string>
    <string name="base_url">https://itunes.apple.com</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="retry">Обновить</string>
    <string name="request_timed_out">Время ожидания ответа истекло</string>
    <string name="clear_history">Очистить историю</string>
    <string name="searched">Вы искали</string>
    <string name="label_duration">Длительность</string>
    <string name="label_album">Альбом</string>
    <string name="label_year">Год</string>
    <string name="label_genre">Жанр</string>
    <string name="label_country">Страна</string>
    <string name="full_track_time">00:30</string>
    <string name="favorites_empty_text">Ваша медиатека пуста</string>
    <string name="playlists_empty_text">Вы не создали\nни одного плейлиста</string>
    <string name="button_create_playlist">Новый плейлист</string>
</resources>