<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/NightBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ======= Верхняя часть (Toolbar, обложка, кнопки) ======= -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/audioplayer_back"
        style="@style/ToolbarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Можно оставить ваши гайдлайны, если они нужны именно в этом макете -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/audioplayer_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/medium_plus_padding_24"
        app:layout_constraintTop_toBottomOf="@id/audioplayer_back"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintDimensionRatio="1:1" />

    <TextView
        android:id="@+id/audioplayer_trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_plus_padding_24"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/big_text"
        style="@style/SearchTrackName"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintTop_toBottomOf="@id/audioplayer_image"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline" />

    <TextView
        android:id="@+id/audioplayer_artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nvsmall_padding"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/medium_text"
        style="@style/SearchTrackName"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintTop_toBottomOf="@id/audioplayer_trackName"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline" />

    <ImageButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vbig_padding_52"
        android:src="@drawable/button_add_to_playlist"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/audioplayer_trackName"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <ImageButton
        android:id="@+id/like_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vbig_padding_52"
        android:src="@drawable/button_like"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/audioplayer_trackName"
        app:layout_constraintEnd_toEndOf="@id/right_guideline" />

    <ImageButton
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding_32"
        android:src="@drawable/button_play"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/audioplayer_trackName"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline" />

    <TextView
        android:id="@+id/audioplayer_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/medium_text"
        style="@style/SearchTrackName"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintTop_toBottomOf="@id/play_btn"
        app:layout_constraintStart_toStartOf="@id/play_btn"
        app:layout_constraintEnd_toEndOf="@id/play_btn"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- ======= Прокручиваемый блок для Label/Value ======= -->
    <ScrollView
        android:id="@+id/scroll_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/audioplayer_timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline">

        <!-- Внутренний ConstraintLayout, НЕ ссылается на parent-гайдлайны -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_duration"
                style="@style/LabelTextView"
                android:text="@string/label_duration"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/value_duration"
                style="@style/ValueTextView"
                app:layout_constraintBaseline_toBaselineOf="@id/label_duration"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/label_album"
                style="@style/LabelTextView"
                android:text="@string/label_album"
                app:layout_constraintTop_toBottomOf="@id/label_duration"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/value_album"
                style="@style/ValueTextView"
                app:layout_constraintBaseline_toBaselineOf="@id/label_album"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/label_year"
                style="@style/LabelTextView"
                android:text="@string/label_year"
                app:layout_constraintTop_toBottomOf="@id/label_album"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/value_year"
                style="@style/ValueTextView"
                app:layout_constraintBaseline_toBaselineOf="@id/label_year"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/label_genre"
                style="@style/LabelTextView"
                android:text="@string/label_genre"
                app:layout_constraintTop_toBottomOf="@id/label_year"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/value_genre"
                style="@style/ValueTextView"
                app:layout_constraintBaseline_toBaselineOf="@id/label_genre"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/label_country"
                style="@style/LabelTextView"
                android:text="@string/label_country"
                app:layout_constraintTop_toBottomOf="@id/label_genre"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/value_country"
                style="@style/ValueTextView"
                app:layout_constraintBaseline_toBaselineOf="@id/label_country"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
